--- a/chatbot/style.css
+++ b/chatbot/style.css
@@ -72,7 +72,7 @@
     border-radius: 10px;
     padding: 8px 10px;
     font-size: 14px;
-    word-break: break-all;
+    /* word-break: break-all; */
 }
 .form .user-inbox .msg-header p{
     color: #333;
